# my-fullstack-app

backend/: pyproject.toml
backend/app/: main.py
frontend/frontend/: package-lock.json  package.json
frontend/frontend/src/: App.tsx  main.tsx  test.tsx
frontend/frontend/src/pages/: About.tsx  Home.tsx  Test.tsx  generalgame.tsx  onlinegame.tsx
frontend/frontend/src/pages/pagecss/: Home.css
